fix invisible scrollbar on edge (still doesn't work on firefox)

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 	line-height: 1;
 }
 body::-webkit-scrollbar{
+  display: none;
 	overflow: hidden; /* Hide scrollbars */
   scrollbar-width: none; /* Firefox 64 */
 }
